--- a/www/bower.json
+++ b/www/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "angular": "~1.5.0",
     "angular-ui-router": "",
-    "materialize": ""
+    "materialize": "",
+    "ngmap": "~1.16.7"
   }
 }
