--- a/api/composer.json
+++ b/api/composer.json
@@ -1,16 +1,8 @@
 {
-    "name": "slim/slim-skeleton",
-    "description": "A Slim Framework skeleton application for rapid development",
-    "keywords": ["microframework","rest","router", "psr7"],
-    "homepage": "http://github.com/slimphp/Slim-Skeleton",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Josh Lockhart",
-            "email": "info@joshlockhart.com",
-            "homepage": "http://www.joshlockhart.com/"
-        }
-    ],
+    "name": "innovagile/hack-summit",
+    "description": "A charity app based on Slim Framework skeleton application - slim/slim-skeleton",
+    "keywords": ["project"],
+    "homepage": "http://169.54.146.72/",
     "require": {
         "php": ">=5.5.0",
         "slim/slim": "^3.1",
