Doctrine basic configuration

--- a/api/composer.json
+++ b/api/composer.json
@@ -7,9 +7,24 @@
         "psr-0": { "CharityApp": "src/" }
     },
     "require": {
+        "incenteev/composer-parameter-handler": "~2.0",
         "php": ">=5.5.0",
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
-        "monolog/monolog": "^1.17"
+        "monolog/monolog": "^1.17",
+        "doctrine/orm": "^2.5"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
+        ],
+        "post-update-cmd": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
+        ]
+    },
+    "extra": {
+        "incenteev-parameters": {
+            "file": "config/parameters.yml"
+        }
     }
 }
