--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular-ui-router": "",
     "ngmap": "~1.16.7",
     "bootstrap": "~3.3.5",
-    "bootstrap-material-design": "~0.5.8"
+    "bootstrap-material-design": "~0.5.8",
+    "angular-local-storage": "~0.2.4"
   }
 }
