--- a/api/composer.json
+++ b/api/composer.json
@@ -12,7 +12,8 @@
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
-        "doctrine/orm": "^2.5"
+        "doctrine/orm": "^2.5",
+        "doctrine/dbal": "^2.5"
     },
     "scripts": {
         "post-install-cmd": [
