Add user organization relation

--- a/api/src/CharityApp/resources/doctrine/CharityApp.Entity.Organization.dcm.yml
+++ b/api/src/CharityApp/resources/doctrine/CharityApp.Entity.Organization.dcm.yml
@@ -27,3 +27,7 @@ CharityApp\Entity\Organization:
             type: text
         description:
             type: text
+    manyToMany:
+        users:
+            targetEntity: User
+            mappedBy: organizations
